--- a/index.html
+++ b/index.html
@@ -17,22 +17,22 @@
 <body>
 <div class="container">
 	<div class="header">
-		<a class="logo" href="#">justMusic<span>Tagline will go here</span></a>
+		<a class="logo" href="www.anuenviroconsultants.com">Anu Enviro Consultants<span>Taking India beyond it par..</span></a>
 		<ul class="social">
-			<li class="fb"><a href="#"></a></li>
-			<li class="tw"><a href="#"></a></li>
-			<li class="yt"><a href="#"></a></li>
+			<li class="fb"><a href="https://www.facebook.com/anuenviroconsultants/"></a></li>
+			<li class="tw"><a href="https://twitter.com/anuenviro"></a></li>
+			<li class="yt"><a href="https://www.youtube.com/channel/UCuYfNtJQW8bCHo8CB8ATAsQ"></a></li>
 		</ul>
 	</div>
 	
 	<div class="clear"></div>
 	
 	<div class="video">
-		<iframe width="500" height="278" src="http://www.youtube.com/embed/LSucnC2lxIY" frameborder="0" allowfullscreen></iframe>
+		<iframe width="500" height="278" src="https://youtu.be/nuU4s2Wr_dc" frameborder="0" allowfullscreen></iframe>
 	</div>
 	
 	<div class="coming_soon">
-		<p>We’re Coming <strong>Very Soon.</strong> Subscribe to our updates till then.</p>
+		<p>Our site is under reconstruction. We will be back<strong>Very Soon.</strong> Subscribe to our updates till then.</p>
 		<form class="information">
 			<div class="main">
 				<input class="field" type="text" value="Enter Your Email Address" onfocus="if(this.value=='Enter Your Email Address') this.value='';" onblur="if(this.value=='' || this.value==' ') this.value='Enter Your Email Address';" />
