--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 	<div class="header">
 		<a class="logo" href="www.anuenviroconsultants.com">Anu Enviro Consultants<span>Taking India beyond it par..</span></a>
 		<ul class="social">
-			<li class="fb"><a href="https://www.facebook.com/anuenviroconsultants/"></a></li>
-			<li class="tw"><a href="https://twitter.com/anuenviro"></a></li>
+			<li class="fb"><a href="https://twitter.com/anuenviro"></a></li>
+			<li class="tw"><a href="https://www.facebook.com/anuenviroconsultants/"></a></li>
 			<li class="yt"><a href="https://www.youtube.com/channel/UCuYfNtJQW8bCHo8CB8ATAsQ"></a></li>
 		</ul>
 	</div>
@@ -28,7 +28,7 @@
 	<div class="clear"></div>
 	
 	<div class="video">
-		<iframe width="500" height="278" src="https://youtu.be/nuU4s2Wr_dc" frameborder="0" allowfullscreen></iframe>
+		<iframe width="500" height="278" src="https://www.youtube.com/embed/nuU4s2Wr_dc" frameborder="0" allowfullscreen></iframe>
 	</div>
 	
 	<div class="coming_soon">
